--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,24 @@
-.idea/
 *.gem
-/.bundle/
-/.yardoc
-/_yardoc/
-/coverage/
-/doc/
-/pkg/
-/spec/reports/
-/tmp/
-
+*.swp
+*~
+.DS_Store
+.analysis
+.bundle/
+.byebug_history
+.jekyll-metadata
+.ruby-gemset
+.ruby-version
+.sass-cache
+/test/source/file_name.txt
+/vendor
+Gemfile.lock
+_site/
+.idea/
+bin/
+bbin/
+coverage
+gh-pages/
+pkg/
+site/_site/
+test/dest
+tmp/*
