--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 sudo: false
 language: ruby
-rvm:
-  - 2.4.2
-before_install: gem install bundler -v 1.16.0
+
+before_install:
+  - gem install bundler -v 1.16.0
+
+matrix:
+  include:
+    - rvm: 2.4.2
+    - rvm: 2.3.5
+    - rvm: 2.2.8
+    - rvm: 2.1.10
 
 notfications:
   email: false
